optimize loading page speed

--- a/mainportfolio.html
+++ b/mainportfolio.html
@@ -117,17 +117,15 @@
           </a>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <a href="runcovery.html" alt="gorby">
             <div class="portfolio-img"><img src="assets/img/portfolio/Run_0Thumbnail.png" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Running Assistant App</h4>
-              <p>UI • UX</p>
-              <!-- <a href="assets/img/portfolio/ux_runcovery.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Running Assistant App"><i class="bx bx-plus"></i></a>
-              <a href="runcovery.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a> -->
+              <p>UI • UX</p>              
             </div>
           </a>
-          </div>
+          </div> -->
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <a href="https://css-zen-garden-updated.netlify.app/" alt="css-zen-garden">
@@ -163,79 +161,15 @@
               <a href="/wall-e.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a> -->
             </div>
           </a>
-          </div>                  
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <a href="https://vint-sound.netlify.app/" alt="vint-sound">
-            <div class="portfolio-img"><img src="assets/img/portfolio/web_vint.png" class="img-fluid" alt=""></div>
-            <div class="portfolio-info">
-              <h4>Music Website</h4>
-              <p>Web</p>
-              <!-- <a href="assets/img/portfolio/web_vint.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Music Website"><i class="bx bx-plus"></i></a>
-              <a href="vint-sound.netlify.app" class="details-link" title="More Details"><i class="bx bx-link"></i></a> -->
-            </div>
-          </a>
           </div>
-
-          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-img"><img src="assets/img/portfolio/interaction_ironman.png" class="img-fluid" alt=""></div>
-            <div class="portfolio-info">
-              <h4>Game Development Work</h4>
-              <p>Web</p>
-              <a href="assets/img/portfolio/interaction_ironman.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Game Development Work"><i class="bx bx-plus"></i></a>              
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div> -->
-
-          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/portfolio/UX_vicinity.png" class="img-fluid" alt=""></div>
-            <div class="portfolio-info">
-              <h4>Outdoor Play App</h4>
-              <p>App</p>
-              <a href="assets/img/portfolio/UX_vicinity.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Outdoor Play App"><i class="bx bx-plus"></i></a>
-              <a href="javascript:void(0)" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>                 -->
-<!-- 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/portfolio/ux_mapsi.png" class="img-fluid" alt=""></div>
-            <div class="portfolio-info">
-              <h4>Fashion Shopping App</h4>
-              <p>App</p>
-              <a href="assets/img/portfolio/ux_mapsi.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Fashion Shopping App"><i class="bx bx-plus"></i></a>
-              <a href="javascript:void(0)" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>          -->
-
-          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-img"><img src="assets/img/portfolio/graphic_bauhaus.png" class="img-fluid" alt=""></div>
-            <div class="portfolio-info">
-              <h4>Bauhaus Infographic</h4>
-              <p>Graphic</p>
-              <a href="assets/img/portfolio/graphic_bauhaus.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Bauhaus Infographic"><i class="bx bx-plus"></i></a>
-              <a href="javascript:void(0)" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div> -->
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-img"><img src="assets/img/portfolio/drawing-trex.png" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>3D Blueprint Drawing</h4>
-              <p>Drawing</p>
-              <!-- <a href="assets/img/portfolio/drawing-trex.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="3D Blueprint Drawing"><i class="bx bx-plus"></i></a>
-              <a href="javascript:void(0)" class="details-link" title="More Details"><i class="bx bx-link"></i></a> -->
+              <p>Drawing</p>              
             </div>
-          </div>          
-
-          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-img"><img src="assets/img/portfolio/graphic-typography.png" class="img-fluid" alt=""></div>
-            <div class="portfolio-info">
-              <h4>Typography Magazine </h4>
-              <p>GRAPHIC</p>
-              <a href="assets/img/portfolio/graphic-typography.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Typography Magazine"><i class="bx bx-plus"></i></a>
-              <a href="javascript:void(0)" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div> -->
+          </div>         
 
         </div>
 
@@ -274,7 +208,7 @@
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script defer src="assets/js/main.js"></script>
 
 
 
