--- a/revopay.html
+++ b/revopay.html
@@ -51,7 +51,7 @@
       <div class="container">
 
         <ol>          
-          <li><a href="index.html">Home</a></li>          
+          <li><a href="mainportfolio.html">Portfolio</a></li>          
           <li>Portfolio Details</li>
         </ol>
         <h2 class="portfolio-title">Portfolio Details</h2>
@@ -79,35 +79,35 @@
               <div class="scroll-wrapper align-items-center">
 
                 <div class="portfolio-items">
-                  <img src="assets/img/revopay/P_1.png" alt="">
+                  <img src="assets/img/revopay/P_1.png" loading="lazy" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/revopay/P_2.png" alt="">
+                  <img src="assets/img/revopay/P_2.png" loading="lazy" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/revopay/P_3.png" alt="">
+                  <img src="assets/img/revopay/P_3.png" loading="lazy" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/revopay/P_4.png" alt="">
+                  <img src="assets/img/revopay/P_4.png" loading="lazy" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/revopay/P_5.png" alt="">
+                  <img src="assets/img/revopay/P_5.png" loading="lazy" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/revopay/P_6.png" alt="">
+                  <img src="assets/img/revopay/P_6.png" loading="lazy" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/revopay/P_7.png" alt="">
+                  <img src="assets/img/revopay/P_7.png" loading="lazy" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/revopay/P_8.png" alt="">
+                  <img src="assets/img/revopay/P_8.png" loading="lazy" alt="">
                 </div>
 
               </div>
