--- a/wall-e.html
+++ b/wall-e.html
@@ -78,35 +78,35 @@
               <div class="scroll-wrapper align-items-center">
 
                 <div class="portfolio-items">
-                  <img src="assets/img/wall-e/e1.png" alt="">
+                  <img src="assets/img/wall-e/e1.png" loading="lazy" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/wall-e/e2.png" alt="">
+                  <img src="assets/img/wall-e/e2.png" loading="lazy" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/wall-e/e3.png" alt="">
+                  <img src="assets/img/wall-e/e3.png" loading="lazy" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/wall-e/e4.png" alt="">
+                  <img src="assets/img/wall-e/e4.png" loading="lazy" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/wall-e/e5.png" alt="">
+                  <img src="assets/img/wall-e/e5.png" loading="lazy" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/wall-e/e6.png" alt="">
+                  <img src="assets/img/wall-e/e6.png" loading="lazy" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/wall-e/e7.png" alt="">
+                  <img src="assets/img/wall-e/e7.png" loading="lazy" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/wall-e/e8.png" alt="">
+                  <img src="assets/img/wall-e/e8.png" loading="lazy" alt="">
                 </div>
                 
               </div>
