--- a/gorby.html
+++ b/gorby.html
@@ -79,35 +79,35 @@
               <div class="scroll-wrapper align-items-center">
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_1.png" alt="">
+                  <img src="assets/img/gorby/P_1.png" loading="lazy" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_2.png" alt="">
+                  <img src="assets/img/gorby/P_2.png" loading="lazy" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_3.png" alt="">
+                  <img src="assets/img/gorby/P_3.png" loading="lazy" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_4.png" alt="">
+                  <img src="assets/img/gorby/P_4.png" loading="lazy" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_5.png" alt="">
+                  <img src="assets/img/gorby/P_5.png" loading="lazy" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_6.png" alt="">
+                  <img src="assets/img/gorby/P_6.png" loading="lazy" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_7.png" alt="">
+                  <img src="assets/img/gorby/P_7.png" loading="lazy" alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/gorby/P_8.png" alt="">
+                  <img src="assets/img/gorby/P_8.png" loading="lazy" alt="">
                 </div>
 
               </div>
