optimise loading speed_2

--- a/etico.html
+++ b/etico.html
@@ -79,55 +79,55 @@
               <div class="scroll-wrapper align-items-center">
 
                 <div class="portfolio-items">
-                  <img src="assets/img/etico/E_1.png" loading="lazy" alt="">
+                  <img src="assets/img/etico/E_1.png"  alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/etico/E_2.png" loading="lazy" alt="">
+                  <img src="assets/img/etico/E_2.png"  alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/etico/E_3.png" loading="lazy" alt="">
+                  <img src="assets/img/etico/E_3.png"  alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/etico/E_4.png" loading="lazy" alt="">
+                  <img src="assets/img/etico/E_4.png"  alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/etico/E_5.png" loading="lazy" alt="">
+                  <img src="assets/img/etico/E_5.png"  alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/etico/E_6.png" loading="lazy" alt="">
+                  <img src="assets/img/etico/E_6.png"  alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/etico/E_7.png" loading="lazy" alt="">
+                  <img src="assets/img/etico/E_7.png"  alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/etico/E_8.png" loading="lazy" alt="">
+                  <img src="assets/img/etico/E_8.png"  alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/etico/E_9.png" loading="lazy" alt="">
+                  <img src="assets/img/etico/E_9.png"  alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/etico/E_10.png" loading="lazy" alt="">
+                  <img src="assets/img/etico/E_10.png"  alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/etico/E_11.png" loading="lazy" alt="">
+                  <img src="assets/img/etico/E_11.png"  alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/etico/E_12.png" loading="lazy" alt="">
+                  <img src="assets/img/etico/E_12.png"  alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/etico/E_13.png" loading="lazy" alt="">
+                  <img src="assets/img/etico/E_13.png"  alt="">
                 </div>
                 
               </div>
