--- a/sound-interaction.html
+++ b/sound-interaction.html
@@ -78,39 +78,39 @@
               <div class="scroll-wrapper align-items-center">
 
                 <div class="portfolio-items">
-                  <img src="assets/img/sound-interaction/sound1.png" loading="lazy" alt="">
+                  <img src="assets/img/sound-interaction/sound1.png"  alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/sound-interaction/sound2.png" loading="lazy" alt="">
+                  <img src="assets/img/sound-interaction/sound2.png"  alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/sound-interaction/sound3.png" loading="lazy" alt="">
+                  <img src="assets/img/sound-interaction/sound3.png"  alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/sound-interaction/sound4.png" loading="lazy" alt="">
+                  <img src="assets/img/sound-interaction/sound4.png"  alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/sound-interaction/sound5.png" loading="lazy" alt="">
+                  <img src="assets/img/sound-interaction/sound5.png"  alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/sound-interaction/sound6.png" loading="lazy" alt="">
+                  <img src="assets/img/sound-interaction/sound6.png"  alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/sound-interaction/sound7.png" loading="lazy" alt="">
+                  <img src="assets/img/sound-interaction/sound7.png"  alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/sound-interaction/sound8.png" loading="lazy" alt="">
+                  <img src="assets/img/sound-interaction/sound8.png"  alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/sound-interaction/sound9.png" loading="lazy" alt="">
+                  <img src="assets/img/sound-interaction/sound9.png"  alt="">
                 </div>                
 
               </div>
