--- a/revopay.html
+++ b/revopay.html
@@ -79,35 +79,35 @@
               <div class="scroll-wrapper align-items-center">
 
                 <div class="portfolio-items">
-                  <img src="assets/img/revopay/P_1.png" loading="lazy" alt="">
+                  <img src="assets/img/revopay/P_1.png"  alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/revopay/P_2.png" loading="lazy" alt="">
+                  <img src="assets/img/revopay/P_2.png"  alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/revopay/P_3.png" loading="lazy" alt="">
+                  <img src="assets/img/revopay/P_3.png"  alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/revopay/P_4.png" loading="lazy" alt="">
+                  <img src="assets/img/revopay/P_4.png"  alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/revopay/P_5.png" loading="lazy" alt="">
+                  <img src="assets/img/revopay/P_5.png"  alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/revopay/P_6.png" loading="lazy" alt="">
+                  <img src="assets/img/revopay/P_6.png"  alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/revopay/P_7.png" loading="lazy" alt="">
+                  <img src="assets/img/revopay/P_7.png"  alt="">
                 </div>
 
                 <div class="portfolio-items">
-                  <img src="assets/img/revopay/P_8.png" loading="lazy" alt="">
+                  <img src="assets/img/revopay/P_8.png"  alt="">
                 </div>
 
               </div>
