etico and others updated

--- a/etico.html
+++ b/etico.html
@@ -126,10 +126,6 @@
                   <img src="assets/img/etico/E_12.png"  alt="">
                 </div>
 
-                <div class="portfolio-items">
-                  <img src="assets/img/etico/E_13.png"  alt="">
-                </div>
-                
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -140,18 +136,19 @@
               <h3>Project Information</h3>
               <ul>
                 <li><strong>Category</strong>: UI • UX Design</li>                
-                <li><strong>Project period</strong>: Jan 2022 - Mar 2022</li>
+                <li><strong>Project period</strong>: Jan 2022 - Jun 2022</li>
                 <li><strong>Team Members</strong>: Jungmin Ahn, Lim Ing, Colin Cheng</li>
-                <li><strong>Role</strong>: Prototyping lead</li>
-                <li><strong>Vision video</strong>: <a href="https://youtu.be/VGGqvuoa3Ns" class="atag">https://youtu.be/VGGqvuoa3Ns</a>
-                </li>
+                <li><strong>Role</strong>: Prototyping lead</li> 
+                <li><strong>Vision video</strong>: <a href="https://youtu.be/VXPZRP-rr78" class="atag">https://youtu.be/VXPZRP-rr78</a>
+                <li><strong>Website</strong>: <a href="https://etico-web.netlify.app/" class="atag">https://etico-web.netlify.app/</a></li>                
+                
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                <strong>Etico App</strong> aims to cultivate a digital community of sustainable diners, <br>a platform where the community can identity and support sustainable.
-                <br><br><strong>Etico Menu</strong> aims to enhances the in-house dining experience<br>through interactivity and transparency using digital menu with foldable screens.
+                <strong>etico App</strong> aims to cultivate a digital community of sustainable diners, <br>a platform where the community can identity and support sustainable.
+                <br><br><strong>etico Menu</strong> aims to enhances the in-house dining experience<br>through interactivity and transparency using digital menu with foldable screens.
               </p>
             </div>
           </div>
@@ -163,15 +160,15 @@
   </main><!-- End #main -->
 
     <!-- ======= Processbook ======= -->
- <!-- <footer id="processbook"> -->
+ <footer id="processbook">
 
   <!-- <div class="container button"> -->
-    <!-- <a href="#" class="hover">
+    <a href="https://drive.google.com/file/d/17z1YaaOf8f93vFDPIIScMwwhUyARtt-g/view?usp=sharing" class="hover">
     <div class="button">
       <strong><span>View More</span></strong>
         </div> 
-      </a>  -->
-   
+      </a> 
+
   <!-- </div> -->
   
 </footer><!-- End Footer -->
