--- a/about.html
+++ b/about.html
@@ -89,11 +89,12 @@
           <strong>Age</strong>: 2*(19**. 6. **)
         </p> -->
         <p>
-          <strong>Address</strong>: 302 W Boundary St, Savannah, GA 31401
+          <strong>Address</strong>: Haeundae-gu, Busan, Republic of Korea 
+
         </p>
-        <p>
+        <!-- <p>
           <strong>Phone Number</strong>: 949-695-7277
-        </p>
+        </p> -->
         <p>
           <strong>E-mail</strong>: jungminahn21@gmail.com
         </p>
