update awards and a resume

--- a/etico.html
+++ b/etico.html
@@ -165,7 +165,7 @@
   <!-- <div class="container button"> -->
     <a href="https://drive.google.com/file/d/17z1YaaOf8f93vFDPIIScMwwhUyARtt-g/view?usp=sharing" class="hover">
     <div class="button">
-      <strong><span>View More</span></strong>
+      <strong><span>Learn More</span></strong>
         </div> 
       </a> 
 
