--- a/mainportfolio.html
+++ b/mainportfolio.html
@@ -162,14 +162,13 @@
             </div>
           </a>
           </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-img"><img src="assets/img/portfolio/drawing-trex.png" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>3D Blueprint Drawing</h4>
               <p>Drawing</p>              
             </div>
-          </div>         
+          </div> -->
 
         </div>
 
