portfolio_23th_oct_2022

--- a/revopay.html
+++ b/revopay.html
@@ -110,6 +110,10 @@
                   <img src="assets/img/revopay/P_8.png"  alt="">
                 </div>
 
+                <div class="portfolio-items">
+                  <img src="assets/img/revopay/P_9.png"  alt="">
+                </div>
+
               </div>
               <div class="swiper-pagination"></div>
             </div>
