edit info about programming lang

--- a/sound-interaction.html
+++ b/sound-interaction.html
@@ -131,7 +131,7 @@
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                A processing program and the C++ language were used to create a scene in which a baby reacts to classical music prenatal education.
+                A processing program and the Java language were used to create a scene in which a baby reacts to classical music prenatal education.
               </p>
             </div>
           </div>
