--- a/wall-e.html
+++ b/wall-e.html
@@ -127,7 +127,7 @@
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                Using various syntax of C++ language, I tried to create objects with various movements.
+                Using various syntax of Java language, I tried to create objects with various movements.
               </p>
             </div>
           </div>
