--- a/etico.html
+++ b/etico.html
@@ -123,7 +123,7 @@
             <div class="portfolio-info">
               <h3>Project Information</h3>
               <ul>
-                <li><strong>Category</strong>: UI • UX Design</li>                
+                <li><strong>Category</strong>: UX Design</li>                
                 <li><strong>Project period</strong>: Jan 2022 - Jun 2022</li>
                 <li><strong>Team Members</strong>: Jungmin Ahn, Lim Ing, Colin Cheng</li>
                 <li><strong>Role</strong>: Prototyping lead</li> 
