--- a/gorby.html
+++ b/gorby.html
@@ -111,7 +111,7 @@
             <div class="portfolio-info">
               <h3>Project Information</h3>
               <ul>
-                <li><strong>Category</strong>: UI • UX Design</li>                
+                <li><strong>Category</strong>: UX Design</li>                
                 <li><strong>Project period</strong>: Jan 2021 - April 2021</li>
                 <li><strong>Team Members</strong>: Sara Williams, Anh Tran, Taylor Rosenfeld, Isabella Gonzalez, <br>
                 Jungmin Ahn, Satchel Hallmark, Sullivan Wilcox, Colin Cheng</li>
