--- a/revopay.html
+++ b/revopay.html
@@ -123,7 +123,7 @@
             <div class="portfolio-info">
               <h3>Project Information</h3>
               <ul>
-                <li><strong>Category</strong>: UI • UX Design</li>
+                <li><strong>Category</strong>: UX Design</li>
                 <!-- <li><strong>Course</strong>: Individual Work</li> -->                
                 <li><strong>Project period</strong>: Sep 2021 - Dec 2021</li>                
                 <li><strong>Team Members</strong>: Erin Mills, Megan Tay, Colin Cheng, Lim Ing, Jungmin Ahn</li>
