--- a/mainportfolio.html
+++ b/mainportfolio.html
@@ -74,7 +74,7 @@
 
         <ul id="portfolio-flters" class="d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
           <!-- <li data-filter="*" class="filter-active">All</li> -->
-          <li data-filter=".filter-app">UX </li>
+          <li data-filter=".filter-app">&nbsp;UX&nbsp;</li>
           <li data-filter=".filter-card">WEB</li>
           <li data-filter=".filter-web">ETC</li>
         </ul>
