edit etico info and thumbnail

--- a/etico.html
+++ b/etico.html
@@ -125,7 +125,7 @@
               <ul>
                 <li><strong>Category</strong>: UX Design</li>                
                 <li><strong>Project period</strong>: Jan 2022 - Jun 2022</li>
-                <li><strong>Team Members</strong>: Jungmin Ahn, Lim Ing, Colin Cheng</li>
+                <li><strong>Team Members</strong>: Jungmin Ahn, Lim Ing, Colin Cheng, Sean Griffith</li>
                 <li><strong>Role</strong>: Prototyping lead</li> 
                 <li><strong>Vision video</strong>: <a href="https://youtu.be/VXPZRP-rr78" class="atag">https://youtu.be/VXPZRP-rr78</a>
                 <li><strong>Website</strong>: <a href="https://etico-web.netlify.app/" class="atag">https://etico-web.netlify.app/</a></li>                
