edited thumbnails and a category

--- a/mainportfolio.html
+++ b/mainportfolio.html
@@ -76,7 +76,7 @@
           <!-- <li data-filter="*" class="filter-active">All</li> -->
           <li data-filter=".filter-app">&nbsp;UX&nbsp;</li>
           <li data-filter=".filter-card">WEB</li>
-          <li data-filter=".filter-web">ETC</li>
+          <li data-filter=".filter-web">AI</li>
         </ul>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
@@ -151,19 +151,7 @@
               <a href="/sound-interaction.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a> -->
             </div>
           </a>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <!-- <a href="nviro.html" alt="nviro"> -->
-            <div class="portfolio-img"><img src="assets/img/portfolio/blank.png" class="img-fluid" alt="blank"></div>            
-          </a>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <!-- <a href="nviro.html" alt="nviro"> -->
-            <div class="portfolio-img"><img src="assets/img/portfolio/blank.png" class="img-fluid" alt="blank"></div>            
-          </a>
-          </div>
+          </div>         
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <a href="nviro.html" alt="nviro">
