AI Song Lyric Sentimental Analysis Project_First Edition

--- a/mainportfolio.html
+++ b/mainportfolio.html
@@ -163,6 +163,16 @@
           </a>
           </div>  
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <a href="forfume.html" alt="nviro">
+            <div class="portfolio-img"><img src="assets/img/portfolio/ai_forfume.png" class="img-fluid" alt="forfume_thumbnail"></div>
+            <div class="portfolio-info">
+              <h4>AI 노래가사 감성분류 프로젝트</h4>
+              <p>AI</p>              
+            </div>
+          </a>
+          </div>  
+
           <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-img"><img src="assets/img/portfolio/drawing-trex.png" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
