--- a/mainportfolio.html
+++ b/mainportfolio.html
@@ -172,6 +172,16 @@
             </div>
           </a>
           </div>  
+          
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <a href="firemonitoring.html" alt="nviro">
+            <div class="portfolio-img"><img src="assets/img/portfolio/ai_firemonitor.png" class="img-fluid" alt="forfume_thumbnail"></div>
+            <div class="portfolio-info">
+              <h4>AI 연기인식 산불모니터링 시스템</h4>
+              <p>AI</p>              
+            </div>
+          </a>
+          </div>  
 
           <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-img"><img src="assets/img/portfolio/drawing-trex.png" class="img-fluid" alt=""></div>
