ai mountain fire monitoring pt_edit

--- a/mainportfolio.html
+++ b/mainportfolio.html
@@ -177,7 +177,7 @@
             <a href="firemonitoring.html" alt="nviro">
             <div class="portfolio-img"><img src="assets/img/portfolio/ai_firemonitor.png" class="img-fluid" alt="forfume_thumbnail"></div>
             <div class="portfolio-info">
-              <h4>AI 연기인식 산불모니터링 시스템</h4>
+              <h4>연기인식 산불모니터링 시스템</h4>
               <p>AI</p>              
             </div>
           </a>
