update firemonitoring demo video link

--- a/firemonitoring.html
+++ b/firemonitoring.html
@@ -147,7 +147,7 @@
                 <li><strong>Project period</strong>: Feb 2023 - Mar 2023</li>
                 <li><strong>Team Members</strong>: 공명희, 박지오, 성재훈, 안중민</li>
                 <li><strong>Role</strong>: 프로젝트 매니저</li>
-                <li><strong>Demo Video</strong>: <a href="https://youtu.be/cOECqRVwgsM" class="atag">https://youtu.be/cDgGkHgNUA4</a></li>
+                <li><strong>Demo Video</strong>: <a href="https://youtu.be/cDgGkHgNUA4" class="atag">https://youtu.be/cDgGkHgNUA4</a></li>
                 <li><strong>Colab Link</strong>: <a href="https://drive.google.com/file/d/1EOYIIrjkOFyH_hbXqtP1NVhPEvlKQIyz/view?usp=sharing" class="atag">산불 연기 인식 VGG16 딥러닝 모델 알고리즘</a></li>
               </ul>
             </div>
