some changes from small letter to capital letter

--- a/forfume.html
+++ b/forfume.html
@@ -132,7 +132,7 @@
               <h3>Project Information</h3>
               <ul>
                 <li><strong>Category</strong>: AI</li>                
-                <li><strong>Project period</strong>: Jan 2023 - Feb 2023</li>
+                <li><strong>Project Period</strong>: Jan 2023 - Feb 2023</li>
                 <li><strong>Team Members</strong>: 안중민, 이혜원, 변재윤, 김유진, 성재훈 </li>
                 <li><strong>Role</strong>: 프로젝트 매니저</li>
                 <li><strong>Demo Video</strong>: <a href="https://youtu.be/cOECqRVwgsM" class="atag">https://youtu.be/cOECqRVwgsM</a></li>
