--- a/revopay.html
+++ b/revopay.html
@@ -125,10 +125,10 @@
               <ul>
                 <li><strong>Category</strong>: UX Design</li>
                 <!-- <li><strong>Course</strong>: Individual Work</li> -->                
-                <li><strong>Project period</strong>: Sep 2021 - Dec 2021</li>                
+                <li><strong>Project Period</strong>: Sep 2021 - Dec 2021</li>                
                 <li><strong>Team Members</strong>: Erin Mills, Megan Tay, Colin Cheng, Lim Ing, Jungmin Ahn</li>
-                <li><strong>Role</strong>: Prototyping lead</li>
-                <li><strong>Vision video</strong>: <a href="https://youtu.be/i6kK_85vGls" class="atag">https://youtu.be/i6kK_85vGls</a></li>
+                <li><strong>Role</strong>: Prototyping Lead</li>
+                <li><strong>Vision Video</strong>: <a href="https://youtu.be/i6kK_85vGls" class="atag">https://youtu.be/i6kK_85vGls</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
