--- a/sound-interaction.html
+++ b/sound-interaction.html
@@ -124,8 +124,8 @@
               <ul>
                 <li><strong>Category</strong>: Sound Interactive Design</li>
                 <!-- <li><strong>Course</strong>: ITGM 326</li> -->
-                <li><strong>Project period</strong>: Jan 2021 - Mar 2021</li>
-                <li><strong>Vision video</strong>: <a href="https://youtu.be/jHL_FqqIstI" class="atag">https://youtu.be/jHL_FqqIstI</a></li>
+                <li><strong>Project Period</strong>: Jan 2021 - Mar 2021</li>
+                <li><strong>Vision Video</strong>: <a href="https://youtu.be/jHL_FqqIstI" class="atag">https://youtu.be/jHL_FqqIstI</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
