--- a/gorby.html
+++ b/gorby.html
@@ -112,11 +112,11 @@
               <h3>Project Information</h3>
               <ul>
                 <li><strong>Category</strong>: UX Design</li>                
-                <li><strong>Project period</strong>: Jan 2021 - April 2021</li>
+                <li><strong>Project Period</strong>: Jan 2021 - April 2021</li>
                 <li><strong>Team Members</strong>: Sara Williams, Anh Tran, Taylor Rosenfeld, Isabella Gonzalez, <br>
                 Jungmin Ahn, Satchel Hallmark, Sullivan Wilcox, Colin Cheng</li>
-                <li><strong>Role</strong>: Interaction lead</li>
-                <li><strong>Vision video</strong>: <a href="https://youtu.be/sZ2kTrvmN1M" class="atag">https://youtu.be/sZ2kTrvmN1M</a></li>
+                <li><strong>Role</strong>: Interaction Lead</li>
+                <li><strong>Vision Video</strong>: <a href="https://youtu.be/sZ2kTrvmN1M" class="atag">https://youtu.be/sZ2kTrvmN1M</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
