--- a/nviro.html
+++ b/nviro.html
@@ -104,9 +104,9 @@
               <h3>Project Information</h3>
               <ul>
                 <li><strong>Category</strong>: UX Design</li>                
-                <li><strong>Project period</strong>: Mar 2021 - Jun 2021</li>
+                <li><strong>Project Period</strong>: Mar 2021 - Jun 2021</li>
                 <li><strong>Team Members</strong>: Jungmin Ahn, Eduardo Alfonso, Lina Cai</li>
-                <li><strong>Role</strong>: Interaction lead</li>                
+                <li><strong>Role</strong>: Interaction Lead</li>                
               </ul>
             </div>
             <div class="portfolio-description">
