--- a/wall-e.html
+++ b/wall-e.html
@@ -120,7 +120,7 @@
               <ul>
                 <li><strong>Category</strong>: Interactive design</li>
                 <!-- <li><strong>Course</strong>: ITGM326</li> -->
-                <li><strong>Project period</strong>: Jan 2021 - Mar 2021</li>
+                <li><strong>Project Period</strong>: Jan 2021 - Mar 2021</li>
                 <!-- <li><strong>Project URL</strong>: <a href="#"></a></li> -->
               </ul>
             </div>
