--- a/about.html
+++ b/about.html
@@ -101,10 +101,14 @@
       </div>
       <div class="profile me">
         <h3>About Me</h3>
-        <p>
+        <!-- <p>
         For me, interaction design is <strong>communication</strong>. Communication between technology and people is fundamental to interaction design.<br/><br/>
           But what is more important to me is the smooth communication between people through these technologies.<br/> 
-          My goal is to bring <strong> joy and communication to people through technology</strong>.</p>
+          My goal is to bring <strong> joy and communication to people through technology</strong>.</p> -->
+        <p>
+        For me, interaction design is all about <strong>communication</strong>. <br>The communication between technology and people is fundamental to interaction design.<br/><br/>
+        However, what is more even important to me is the seamless communication between people through technology.<br/> 
+        My goal is to <strong>bring joy and foster communication among people through the use of technology</strong>.</p>
       </div>          
         <a href="/assets/2023_JungminAhn_resume.pdf" download class="btn-learn-more">Go to Resume</a>
       </div>
