edit my intro 2nd

--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
           But what is more important to me is the smooth communication between people through these technologies.<br/> 
           My goal is to bring <strong> joy and communication to people through technology</strong>.</p> -->
         <p>
-        For me, interaction design is all about <strong>communication</strong>. <br>The communication between technology and people is fundamental to interaction design.<br/><br/>
+        For me, interaction design is all about <strong>communication</strong>. <br>The communication between people and technology is fundamental to interaction design.<br/><br/>
         However, what is more even important to me is the seamless communication between people through technology.<br/> 
         My goal is to <strong>bring joy and foster communication among people through the use of technology</strong>.</p>
       </div>          
