change the categorical title of forfume

--- a/mainportfolio.html
+++ b/mainportfolio.html
@@ -167,7 +167,7 @@
             <a href="forfume.html" alt="nviro">
             <div class="portfolio-img"><img src="assets/img/portfolio/ai_forfume.png" class="img-fluid" alt="forfume_thumbnail"></div>
             <div class="portfolio-info">
-              <h4>AI 노래가사 감성분류 프로젝트</h4>
+              <h4>AI 노래가사 감성분석 프로젝트</h4>
               <p>AI</p>              
             </div>
           </a>
