edit index page

--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
     <div class="container d-flex align-items-center index about">            
       <nav id="navbar" class="navbar navbar-two">
         <ul class="nav-container">
-          <li><a class="nav-link scrollto" href="/mainportfolio.html">Portfolio</a></li>
+          <li><a class="nav-link scrollto" href="/index.html">Portfolio</a></li>
           <li><a class="nav-link scrollto active" href="/about.html">About</a></li>          
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
