--- a/revopay.html
+++ b/revopay.html
@@ -51,7 +51,7 @@
       <div class="container">
 
         <ol>          
-          <li><a href="mainportfolio.html">Portfolio</a></li>          
+          <li><a href="index.html">Portfolio</a></li>          
           <li>Portfolio Details</li>
         </ol>
         <h2 class="portfolio-title">Portfolio Details</h2>
