put a blank box

--- a/index.html
+++ b/index.html
@@ -153,7 +153,11 @@ Thank you.
               <p>AI</p>              
             </div>
           </a>
-          </div>  
+          </div>
+          
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">          
+            <div class="portfolio-img"><img src="assets/img/portfolio/blank.png" class="img-fluid" alt=""></div>       
+          </div>
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <a href="firemonitoring.html" alt="nviro">
