--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ Thank you.
           </a>
           </div>
           
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">          
+          <div class="col-lg-4 col-md-6 portfolio-item">          
             <div class="portfolio-img"><img src="assets/img/portfolio/blank.png" class="img-fluid" alt=""></div>       
           </div>
           
