add gartner page

--- a/revopay.html
+++ b/revopay.html
@@ -126,8 +126,8 @@
                 <li><strong>Category</strong>: UX Design</li>
                 <!-- <li><strong>Course</strong>: Individual Work</li> -->                
                 <li><strong>Project Period</strong>: Sep 2021 - Dec 2021</li>                
-                <li><strong>Team Members</strong>: Erin Mills, Megan Tay, Colin Cheng, Lim Ing, Jungmin Ahn</li>
-                <li><strong>Role</strong>: Prototyping Lead</li>
+                <li><strong>Team Members</strong>: Jungmin Ahn, Erin Mills, Megan Tay, Colin Cheng, Lim Ing</li>
+                <li><strong>Role</strong>: UX Research, UI Design, Prototyping</li>
                 <li><strong>Vision Video</strong>: <a href="https://youtu.be/i6kK_85vGls" class="atag">https://youtu.be/i6kK_85vGls</a></li>
               </ul>
             </div>
