--- a/nviro.html
+++ b/nviro.html
@@ -106,7 +106,7 @@
                 <li><strong>Category</strong>: UX Design</li>                
                 <li><strong>Project Period</strong>: Mar 2021 - Jun 2021</li>
                 <li><strong>Team Members</strong>: Jungmin Ahn, Eduardo Alfonso, Lina Cai</li>
-                <li><strong>Role</strong>: Interaction Lead</li>                
+                <li><strong>Role</strong>: UX Research, UI Design, Prototyping</li>                
               </ul>
             </div>
             <div class="portfolio-description">
