--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@ Thank you.
           </div>  
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item">          
+        <!-- <div class="col-lg-4 col-md-6 portfolio-item">          
           <div class="portfolio-img"><img src="assets/img/portfolio/blank.png" class="img-fluid" alt=""></div>       
-        </div>
+        </div> -->
 
       </div>
     </section>
