--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
           But what is more important to me is the smooth communication between people through these technologies.<br/> 
           My goal is to bring <strong> joy and communication to people through technology</strong>.</p> -->
         <p>
-        For me, interaction design is all about <strong>communication</strong>. <br>The communication between people and technology is fundamental to interaction design.<br/><br/>
+        For me, UX design is all about <strong>communication</strong>. <br>The communication between people and technology is fundamental to UX design.<br/><br/>
         However, what is more even important to me is the seamless communication between people through technology.<br/> 
         My goal is to <strong>bring joy and foster communication among people through the use of technology</strong>.</p>
       </div>          
@@ -178,18 +178,11 @@
         <div class="skills-content">
 
           <div class="progress">
-            <span class="skill">HTML <i class="val">85%</i></span>
+            <span class="skill">HTML/CSS <i class="val">85%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-          </div>
-
-          <div class="progress">
-            <span class="skill">CSS <i class="val">80%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
+          </div>          
 
           <div class="progress">
             <span class="skill">JavaScript <i class="val">70%</i></span>
@@ -206,7 +199,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">C++<i class="val">70%</i></span>
+            <span class="skill">Python<i class="val">70%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
