--- a/etico.html
+++ b/etico.html
@@ -122,7 +122,7 @@
                 <li><strong>Category</strong>: UX Design</li>                
                 <li><strong>Project Period</strong>: Jan 2022 - Jun 2022</li>
                 <li><strong>Team Members</strong>: Jungmin Ahn, Lim Ing, Colin Cheng, Sean Griffith</li>
-                <li><strong>Role</strong>: UX Research, UI Design, Prototyping</li> 
+                <li><strong>Role</strong>: UX Research, UI Design, Prototyping, Web Development</li> 
                 <li><strong>Vision Video</strong>: <a href="https://youtu.be/VXPZRP-rr78" class="atag">https://youtu.be/VXPZRP-rr78</a>
                 <li><strong>Website</strong>: <a href="https://etico-web.netlify.app/" class="atag">https://etico-web.netlify.app/</a></li>                
                 
