edit gartneer thumbnail description

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ Thank you.
             <a href="/gartner.html" alt="gartner">
             <div class="portfolio-img"><img src="assets/img/portfolio/UX_Gartner.png" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>Gart IT Trend Report</h4>
+              <h4>Gartner IT Trend Report</h4>
               <p>UX</p>
             </div>
           </a>
