update all projects

--- a/forfume.html
+++ b/forfume.html
@@ -117,17 +117,18 @@
               <ul>
                 <li><strong>Category</strong>: AI</li>                
                 <li><strong>Project Period</strong>: Jan 2023 - Feb 2023</li>
-                <li><strong>Team Members</strong>: 안중민, 이혜원, 변재윤, 김유진, 성재훈 </li>
-                <li><strong>Role</strong>: 프로젝트 매니저</li>
-                <li><strong>Demo Video</strong>: <a href="https://youtu.be/cOECqRVwgsM" class="atag">https://youtu.be/cOECqRVwgsM</a></li>
-                <li><strong>Colab Link</strong>: <a href="https://drive.google.com/file/d/1siDnIJ1CFg_kNtcH2M2z0Pg3s18R04ki/view?usp=share_link" class="atag">긍정분류예측코드_하이브리드 감성분석 모델 <br> 
-                <a href="https://drive.google.com/file/d/1d0DsW1y_VAN-i601WBN2m98749EgjsAm/view?usp=share_link" class="atag">부정분류예측코드_하이브리드 감성분석 모델</a></li>
+                <li><strong>Team Members</strong>: Jungmin Ahn, Hyewon Lee, Jaeyoon Byeon, Yoojin Kim, Jaehoon Sung</li>
+                <li><strong>Role</strong>: Project Manager</li>
+                <li><strong>Lyric Classification Demo</strong>: <a href="https://youtu.be/cOECqRVwgsM" class="atag">https://youtu.be/cOECqRVwgsM</a></li>
+                <li><strong>Voice Interaction Demo</strong>: <a href="https://youtube.com/shorts/RA24bNLbhAM" class="atag">https://youtube.com/shorts/RA24bNLbhAM</a></li>
+                <li><strong>Colab Link</strong>: <a href="https://drive.google.com/file/d/1siDnIJ1CFg_kNtcH2M2z0Pg3s18R04ki/view?usp=share_link" class="atag">Positive Lyric Classification Code<br> 
+                <a href="https://drive.google.com/file/d/1d0DsW1y_VAN-i601WBN2m98749EgjsAm/view?usp=share_link" class="atag">Negative Lyric Classification Code</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                노래가사를 통해 노래들을 행복, 응원, 슬픔, 분노 네가지 감성으로 분류하여 <br/> 사용자의 상황과 기분에 맞춰 노래를 추천할 수 있는 시스템을 고안하였습니다. 
+                HUMIN protects children's emotions by filtering songs including harmful lyrics<br> through a natural language processing model. 
  
               </p>
             </div>
