--- a/index.html
+++ b/index.html
@@ -155,11 +155,18 @@ Thank you.
           </a>
           </div>                                  
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">            
+            <div class="portfolio-img"><img src="assets/img/portfolio/blank.png" class="img-fluid" alt="forfume_thumbnail"></div>
+            <!-- <div class="portfolio-info">
+              <h4>AI 노래가사 감성분석 프로젝트</h4>
+              <p>AI</p>               -->
+            </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <a href="forfume.html" alt="nviro">
             <div class="portfolio-img"><img src="assets/img/portfolio/ai_forfume.png" class="img-fluid" alt="forfume_thumbnail"></div>
             <div class="portfolio-info">
-              <h4>AI 노래가사 감성분석 프로젝트</h4>
+              <h4>Sentiment Analytics Project with Lyrics</h4>
               <p>AI</p>              
             </div>
           </a>
@@ -175,6 +182,8 @@ Thank you.
           </a>
           </div>  
         </div>
+
+        
 
         <!-- <div class="col-lg-4 col-md-6 portfolio-item">          
           <div class="portfolio-img"><img src="assets/img/portfolio/blank.png" class="img-fluid" alt=""></div>       
